Revert "Fix mobile PWA bottom overflow"
This reverts commit 81bc8ea196097485eaa979ec9f2a0cb2a483adef.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,6 @@
 
 html,
 body {
-  height: 100%;
   min-height: 100vh;
   min-height: 100dvh;
 }
@@ -27,8 +26,9 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  padding-top: env(safe-area-inset-top, 0px);
+  padding-bottom: env(safe-area-inset-bottom, 0px);
   overscroll-behavior-y: none;
-  overflow: hidden;
 }
 
 @layer utilities {
